--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,15 @@ body{
 
 /* ////////////////////////////////////////////// Hero */
 
+a{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    margin: 30px;
+    text-align: left;
+    text-decoration: none;
+    color: rgb(68, 5, 37);
+}
+
 section{
     min-height: 20vh;
 }
