--- a/css/menu.css
+++ b/css/menu.css
@@ -73,6 +73,7 @@
 /* https://cubic-bezier.com/ */
 .navigation{
     position: fixed;
+    z-index: 9999;
     top : 40px;
     right : 10px;
     margin-top: 10px;
@@ -89,6 +90,7 @@
 }
 .navigation__bouton {
     position : fixed;
+    z-index: 10000;
     top : 10px;
     right : 10px;
 }
@@ -99,7 +101,7 @@
     text-decoration: none;
     display: block;
     color : black;
-    font-size: 30px;
+    font-size: 20px;
     padding: 10px;
 }
 
