--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,15 @@ body{
     background-repeat: no-repeat;
     background-image: url("../img/img_02.jpg");
     background-size: auto;
-    min-height: 50vh; 
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 100vh; 
+    margin: 0;      
     text-align: start;
 }
 
 .les__fleurs{
-    padding-left: 30px;
+    padding-left: 0px;
     color: rgb(148, 5, 115);
     padding-bottom: 10px;
 }
@@ -39,7 +42,7 @@ section{
 margin: 0 auto 0  0;
 max-width: 900px;
 padding : 30px;
-background-color: #ffffff4d;
+background-color: rgba(255, 255, 255, 0.621);
 }
 
 .hero__h1{
@@ -70,8 +73,6 @@ h2{
 
 }
 
-
-
 h6{
     font-size: 20px;
     text-align: center;
@@ -96,7 +97,7 @@ h1, h2, h3{
 
 h1{
     margin: 0px;
-    padding: 20px;
+    padding: 30px;
     background-color: pink;
 }
 
@@ -251,7 +252,7 @@ caption{
     flex-wrap: wrap;
 }
 
-.pivoine, .rosier, .dalhia, .geranium{
+.pivoine, .rosier, .dalhia, .geranium, .begonia, .laurier, .fuchsia, .hibiscus{
     justify-content: flex-start;
     display: flex;
     flex: 1 0 348px;
@@ -264,62 +265,9 @@ caption{
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
 }
-
-/* .pivoine{
-    align-items: center;
-    display: flex;
-    flex: 1 0 348px;
-    min-height: 170px;
-    padding: 5px;
-    margin: 2px;
-    margin-top: 10px;
-    margin-left: 10px;
-    border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-} */
-
-.rosier{
-    /* align-items: center;
-    display: flex;
-    flex: 1 0 348px;
-    background-color: rgb(255, 255, 255);
-    padding: 5px;
-    margin: 2px;
-    margin-top: 10px;
-    border-radius: 10px;
-    min-height: 170px; */
+.rosier,.geranium, .laurier, .hibiscus{
     margin-right: 10px;
 }
-
-/* .dalhia{
-    align-items: center;
-    display: flex;
-    flex: 1 0 348px;
-    background-color: rgb(255, 255, 255);
-    padding: 5px;
-    margin: 2px;
-    margin-top: 10px;
-    margin-right: 10px;
-    border-radius: 10px;
-    min-height: 170px;
-} */
-
-.geranium{
-    /* align-items: center;
-    display: flex;
-    flex: 1 0 348px;
-    background-color: rgb(255, 255, 255);
-    padding: 5px;
-    margin: 2px;
-    margin-top: 0px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 10px;
-    min-height: 170px; */
-    margin-right: 10px;
-}
-
-
 
 .texte{
     width: 49%;
@@ -340,6 +288,8 @@ figcaption{
     /* max-height: 30vh;
     max-width: 30vh; */
     object-fit: cover;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .img__pivoine{
@@ -350,6 +300,8 @@ figcaption{
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 200px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .img__rosier{
@@ -360,6 +312,8 @@ figcaption{
     margin-left: 25px;
     /* max-width: 10%;
     max-height: 5%; */
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .img__dalhia{
@@ -368,6 +322,8 @@ figcaption{
     flex-basis: 200px;
     padding-top: 40px;
     padding-left: 25px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .img__geranium{
@@ -378,6 +334,52 @@ figcaption{
     padding-top: 40px;
     margin-left: 15px;
     margin-right: 19px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.img__begonia{
+    padding-top: 40px;
+    margin-left: 15px;
+    margin-right: 19px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 200px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.img__laurier{
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 200px;
+    padding-top: 40px;
+    margin-left: 15px;
+    margin-right: 19px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.img__fuchsia{
+    padding-top: 40px;
+    margin-left: 15px;
+    margin-right: 19px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 200px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.img__hibiscus{
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 200px;
+    padding-top: 40px;
+    margin-left: 15px;
+    margin-right: 19px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .principal__article{
@@ -429,6 +431,61 @@ figcaption{
     font-size: 30px;
     margin-bottom: 0;
 }
+
+/* ////////////////////////////////////////////// Section Galerie photos */
+.galerie_container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.galerie{
+    overflow: hidden; 
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.galerie img {
+    width: 100%; 
+    height: 200px;
+    object-fit: cover; 
+    display: block;
+    display: flex;
+    flex-wrap: wrap;
+
+    filter: grayscale(50%) blur(2px) sepia(30%);
+    transition: all 0.3s ease;
+}
+
+.galerie figcaption {
+    text-align: center;
+    padding: 5px 0;
+    font-size: 14px;
+    color: #333;
+}
+
+.galerie img:hover {
+    filter: grayscale(0%) blur(0) sepia(0); 
+    transform: scale(1.5);
+}
+
+/* ////////////////////////////////////////////// Section vidéo */
+
+.video__fleurs{
+    display: flex;
+    flex-wrap: wrap;  
+    gap: 40px;   
+    padding: 20;   
+    margin-top: 10px;
+    padding-left: 30px;      
+}
+
+.video__fleurs iframe {
+    width: 30%;
+    min-height: 300px;
+    height: 200px;
+}
+
 /* ////////////////////////////////////////////// Colloration des sections */
 
 /*
@@ -456,7 +513,7 @@ body > div:nth-of-type(1){
 /*body > div:nth-of-type(2){
     background-color: palegreen;
 }  */
-body > div:nth-of-type(3){
+/* body > div:nth-of-type(3){
     background-color: rgb(255, 228, 253);
 }      
 body > div:nth-of-type(4){
@@ -468,6 +525,9 @@ body > div:nth-of-type(5){
 body > div:nth-of-type(6){
     background-color: rgb(231, 97, 166);
 }  
+body > div:nth-of-type(7){
+    background-color: rgb(141, 6, 75);
+}   */
 
 /* ////////////////////////////////////////////// Pied de page */
 .quatre{
@@ -479,35 +539,74 @@ icon-container{
     gap: 30px;
     text-align: left;
     padding: 40px;
-    padding-left: 30px;
+    padding-left: 0px;
 }
 
 address{
-   margin-top: 0px;
-   text-align: left;
-   padding-left: 30px;
-   padding-top: 0px;
-   gap: 0px;
+    margin: 0;
+    margin-top: 0px;
+    text-align: left;
+    padding-left: 30px !important;
+    padding-top: 0px;
+    gap: 0px;
+     display: block;
 }
 
 .info{
-    padding-top: 162px;
+    padding-top: 160px;
+    padding-bottom: 70px;
 }
-.pied__page__left{
+
+/* .pied__page__left{
     float: left;
     width: 50%;
+    overflow: auto;
 }
 
 .pied__page__right{
     float: right;
     width: 50%;
+    overflow: auto;
+} */
+
+#pied {
+    background-color: rgba(255, 255, 255, 0.621);
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 30px;
+}
+
+#pied.centre {
+    display: block;     
+    text-align: left; 
 }
 
 .pied__page__img{
-    float: right;
-    width: 500px;
+    display: block;       
+    width: 100%;          
+    max-width: 600px;     
+    height: auto;         
+    object-fit: contain;
+}
 
-    padding-right: 30px;
-    flex-wrap: wrap;
+.pied__page__right {
+    flex: 1;         
     display: flex;
+    justify-content: flex-end; 
+    align-items: flex-start;
+}
+
+.pied__page__left {
+    float: left;       
+    text-align: left;
+    margin: 0;
+    padding: 0 30px;   
+}
+
+.les__fleurs__pied{
+    padding-left: 0px;
+    color: rgb(148, 5, 115);
+    padding-bottom: 10px;
+    margin-left: 0;
 }
